--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
+
+    <script src="sketch.js"></script>
+
   </head>
   <body>
-    <script src="sketch.js"></script>
-  
 
-</body></html>
+
+</body>
+
+<h1>Draw Machine-ah!</h1>
+</html>
