gradient test out in index
kk

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 
     <script src="sketch.js"></script>
+    <script src="sketchGradient.js"></script>
 
   </head>
   <body>
@@ -16,6 +17,8 @@
 
 <h1>Draw Machine-ah!</h1>
 <p> under construction</p>
+
+
 
 
 </html>
