--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
 
 
-    <script src="sketch.js"></script>
     <script src="sketchGradient.js"></script>
 
 
@@ -14,12 +13,13 @@
   </head>
   <body>
 
+    <script src="sketchGradient.js"></script>
 
 </body>
 
 <h1>Draw Machine-ah!</h1>
-<p> click here for the real deal! <a href="page2.html">Gradient</a>?<br />
-Have fun! ;-)</p>
+<p> Move the mouse over the gradient and see what happens!
+It's a real mood ;)</p>
 
 
 
