--- a/page2.html
+++ b/page2.html
@@ -7,18 +7,17 @@
 
 
     <script src="sketchGradient.js"></script>
+    <script src="sketch.js"></script>
 
 
 
   </head>
   <body>
 
-    <script src="sketchGradient.js"></script>
-
 </body>
 
 <h1>Draw Machine-ah!</h1>
-<p> Move the mouse over the gradient and see what happens!
+<p> Move the mouse over the gradient and see what happens!<br>
 It's a real mood ;)</p>
 
 
