--- a/page2.html
+++ b/page2.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
+    <script src="sketchg.js"></script>
 
-    <script src="sketchGradient.js"></script>
-    <script src="sketch.js"></script>
 
 
 
   </head>
   <body>
+
 
 </body>
 
@@ -20,7 +20,6 @@
 <p> Move the mouse over the gradient and see what happens!<br>
 It's a real mood ;)</p>
 
-
-
+https://editor.p5js.org/nbondogji/present/LHCMmgtpE
 
 </html>
