--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 </body>
 
 <h1>Draw Machine-ah!</h1>
-<p> click here for the real deal! <a href="page2.html">Gradient</a>?<br />
-Have fun! ;-)</p>
+<p> click here for the real deal! <a href="https://editor.p5js.org/nbondogji/present/LHCMmgtpE">Gradient</a>
+  <p> Move the mouse over the gradient and see what happens!<br>
+  It's a real mood ;)</p><br />
+
 
 
 
