--- a/page2.html
+++ b/page2.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
 
 
-    <script src="sketch.js"></script>
     <script src="sketchGradient.js"></script>
+
 
 
 
@@ -18,13 +18,10 @@
 </body>
 
 <h1>Draw Machine-ah!</h1>
-<p>My Machine is based on moods.I used gradient colors to express one's emotions as it is not easy to do for most people.</p>
-play around with my invention and see what you feel. It's a modern day mood ring!
-<p> first, draw on screen!
-  <br> Then enter here! <a href="page1.html">Gradient</a>
+<p> How do you feel? <a href="https://editor.p5js.org/nbondogji/present/rSznL-bs3">express yourself</a>
+  </p><br />
 
-
-
+<iframe src="https://editor.p5js.org/nbondogji/embed/rSznL-bs3"></iframe>
 
 
 
