--- a/page1.html
+++ b/page1.html
@@ -17,7 +17,7 @@
 </body>
 
 <h1>Grade Machine-ah!</h1>
-<p> Move the mouse over the gradient and see what happens! <a href="page2.html">Gradient</a>
+<p> Move the mouse over the gradient and see what happens! <a href="page2.html">Roller Coaster</a>
 <br>It's a real mood ;)</p><br />
 
 
