final gradient project finished

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 </body>
 
 <h1>Draw Machine-ah!</h1>
-<p>My Machine is based on moods.I used gradient colors to express one's emotions as it is not easy to do for most people.</p>
+<p>My Machine is based on moods. I used gradient colors to express one's emotions as it is not easy to do for most people.
+  <br>Here I use the graidents on color and how fast or slow it changes that corellates with our emotions.
+  This is to show how fast or slow our feelings play with our day to day lives.</p>
 play around with my invention and see what you feel. It's a modern day mood ring!
 <p> first, draw on screen!
-  <br> Then enter here! <a href="page1.html">Gradient</a>
+  <br> Then, enter here! <a href="page1.html">Gradient</a>
 
 
 
