--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
 
 
-    <script src="sketchGradient.js"></script>
+
+
+    <script src="sketchg.js"></script>
 
 
 
@@ -17,11 +19,11 @@
 </body>
 
 <h1>Grade Machine-ah!</h1>
-<p> Move the mouse over the gradient and see what happens! <a href="page2.html">Roller Coaster</a>
+<p> Move the mouse over the gradient and see what happens!
+  <br><a href="page2.html">Roller Coaster</a>
 <br>It's a real mood ;)</p><br />
 
 
-<iframe src="https://editor.p5js.org/nbondogji/embed/LHCMmgtpE"></iframe>
 
 
 
