--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
 
-    <script src="sketchGradient.js"></script>
+    <script src="sketchnoise.js"></script>
 
 
 
@@ -17,11 +17,9 @@
 
 </body>
 
-<h1>Draw Machine-ah!</h1>
-<p> How do you feel? <a href="https://editor.p5js.org/nbondogji/present/rSznL-bs3">express yourself</a>
+<h1>Noise Machine-ah!</h1>
+<p> How do you feel? express yourself</a>
   </p><br />
-
-<iframe src="https://editor.p5js.org/nbondogji/embed/rSznL-bs3"></iframe>
 
 
 
