--- a/page1.html
+++ b/page1.html
@@ -23,6 +23,7 @@
   <br><a href="page2.html">Roller Coaster</a>
 <br>It's a real mood ;)</p><br />
 
+  <br> Don't Forget --> hit "s" to save me!!
 
 
 
