--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
+<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
+
 
     <script src="sketch.js"></script>
     <script src="sketchGradient.js"></script>
 
-
+    <style>
+    body {
+        font-family: 'Crimson Text';font-size: 15px;
+    }
+    </style>
 
   </head>
   <body>
