--- a/page1.html
+++ b/page1.html
@@ -5,12 +5,17 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
+    <link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 
 
 
     <script src="sketchg.js"></script>
 
-
+    <style>
+    body {
+        font-family: 'Crimson Text';font-size: 15px;
+    }
+    </style>
 
   </head>
   <body>
