--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,13 @@
     <script src="sketchnoise.js"></script>
 
 
+    <link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 
+    <style>
+    body {
+        font-family: 'Crimson Text';font-size: 15px;
+    }
+    </style>
 
   </head>
   <body>
