--- a/index.html
+++ b/index.html
@@ -1,40 +1,27 @@
-<!DOCTYPE html><html><head>
-    <script src="p5.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
+<!DOCTYPE html>
+<html>
+  <head>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-
-<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 
 
-    <script src="sketch.js"></script>
-    <script src="sketchGradient.js"></script>
 
-    <style>
-    body {
-        font-family: 'Crimson Text';font-size: 15px;
-    }
-    </style>
 
   </head>
   <body>
 
+    <div id="grad"></div>
 
-</body>
-
-<h1>Draw Machine-ah!</h1>
-<p>My Machine is based on moods. I used gradient colors to express one's emotions as it is not easy to do for most people.
-  <br>Here I use the graidents on color and how fast or slow it changes that correlates with our emotions.
-  This is to show how fast or slow our feelings play with our day to day lives.</p>
-play around with my invention and see what you feel. It's a modern day mood ring!
-<p> first, draw on screen!
-  <br> hit "s" to save me!!
-  <br> Then, enter here! <a href="page1.html">Gradient</a>
+    <script src="sketch.js"></script>
+    
+    <canvas id="canvas-basic"></canvas>
 
 
 
 
-
-
+  </body>
 </html>
